# hxq_llm_lite

./: .pre-commit-config.yaml  README.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/hxq_llm_lite/: .env.example  constants.py  main.py  restart.sh
backend/hxq_llm_lite/core/: config.py  db.py  log.py  security.py
backend/hxq_llm_lite/models/: chats.py  messages.py
backend/hxq_llm_lite/routers/: chats.py  models.py
backend/hxq_llm_lite/templates/: index.html
backend/hxq_llm_lite/utils/: common.py
backend/scripts/: format.sh
