[project]
name = "hxq-llm-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "isort>=6.0.1",
    "jwt>=1.4.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
